Mudar cor do texto dos inputs

--- a/src/styles/sass/components/_input.scss
+++ b/src/styles/sass/components/_input.scss
@@ -11,7 +11,7 @@
     
     padding: 1rem;
     
-    color: v.$color-gray;
+    color: v.$color-blue;
     
     border: 1px solid v.$color-gray;
     border-radius: 1rem;
