--- a/src/styles/sass/components/_button.scss
+++ b/src/styles/sass/components/_button.scss
@@ -17,3 +17,10 @@
     cursor: pointer;
   }
 }
+
+.secundary{
+  background-color: v.$color-white;
+  color: v.$color-blue;
+
+  border: 1px solid v.$color-blue;
+}
