--- a/src/styles/sass/pages/_register.scss
+++ b/src/styles/sass/pages/_register.scss
@@ -17,4 +17,43 @@
     }
   }
 
+  .register-content{
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+
+    &__sub-title{
+      color: v.$color-gray;
+    }
+
+    &__form{
+      margin-top: 2rem;
+      &__form-container{
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+
+        &__street-info{
+          display: flex;
+          gap: 1rem;
+
+          .input-container:nth-child(2){
+            width: 20%;
+          }
+        }
+
+        &__buttons-container{
+          display: flex;
+          flex-direction: column;
+          gap: 1rem;
+
+          margin-top: 4rem;
+        }
+
+        &__buttons-container-inline{
+          flex-direction: row;
+        }
+      }
+    }
   }
+}
