Estilizando a seção de DogCard

--- a/src/styles/sass/pages/_home.scss
+++ b/src/styles/sass/pages/_home.scss
@@ -52,4 +52,25 @@
       gap: 1.5rem;
     }
   }
+
+  &__section-my-dogs{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+
+    margin-top: 2.25rem;
+
+    &__text-container{
+      display: flex;
+      justify-content: space-between;
+
+      &__add-dog{
+        font-size: 1rem;
+
+        color: v.$color-blue;
+
+        cursor: pointer;
+      }
+    }
+  }
 }
